--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -12,8 +12,13 @@
   <tbody>
     <% @registers.each do |register| %>
       <tr>
-        <td><%= link_to 'Show', register %></td>
-        <td><%= link_to 'Edit', edit_register_path(register) %></td>
+        <td>おなまえ:<%= register.name %> </td>
+        <td>電話番号:<%= register.number %> </td>
+        <td>ネタ:<%= register.todo %> </td>
+        <td>範囲:<%= register.range %> </td>
+        <td>何時におこしてほしい？:<%= process_datetime(register.time) %> </td>
+        <td><%= link_to 'Show', register %> </td>
+        <td><%= link_to 'Edit', edit_register_path(register) %> </td>
         <td><%= link_to 'Destroy', register, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
