--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -18,7 +18,9 @@
 
   <div class="number-field">
     <%= form.label "電話番号を入力してね" %>
-    <%= form.text_field :number %>
+    <%= form.text_field :number_1 %>-
+    <%= form.text_field :number_2 %>-
+    <%= form.text_field :number_3 %>
   </div>
 
   <div class="todo-field">
