--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -25,7 +25,7 @@
 
   <div class="todo-field">
     <%= form.label "おこしてくれたらなにやる？" %>
-    <%= form.text_field :todo %>
+    <%= form.text_area :todo %>
   </div>
 
   <div class="time-field">
