--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -1,34 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<div class="name">
-  <p>おなまえ: </p>
-  <%= @register.name %>
-</div>
-
-<div class="phone_number">
-    <p>電話番号: </p>
-    <%= @register.number %>
-</div>
-
-<div class="range">
-    <p>許容: </p>
-    <%= @register.range %>
-</div>
-
-<div class="time">
-  <p>起こして欲しい時間: </p>
-  <%= process_datetime(@register.time) %>
-</div>
-
-<div class="todo">
-  <p>なにするの</p>
-  <%= @register.todo %>
-</div>
-
-<%= link_to 'Edit', edit_register_path(@register) %> |
-<%= link_to 'Back', registers_path %>
-
-
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 neta2">
@@ -41,7 +10,7 @@
       <div class="icon">
         <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
       </div>
-      <p><%= @register.number %></p>
+      <p><%= @register.time.hour.to_s + ":" +  @register.time.min.to_s %></p>
     </div>
     <div class="col-xs-6 call">
       <button type="button" class="btn btn-warning btn-lg btn-block">
