--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -13,7 +13,8 @@
       <p><%= @register.time.hour.to_s + ":" +  @register.time.min.to_s %></p>
     </div>
     <div class="col-xs-6 call">
-      <button type="button" class="btn btn-warning btn-lg btn-block">
+      <button type="button" class="btn btn-warning btn-lg btn-block"
+              onclick="location.href='tel:<%=@register.number %>'">
         <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></button>
     </div>
 
