--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="col-xs-6 call">
       <button type="button" class="btn btn-warning btn-lg btn-block"
-              onclick="location.href='tel:<%=@register.number %>'">
+              onclick="location.href='<%=set_number(@register.number) %>'">
         <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></button>
     </div>
 
