--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <% Register.all.each do |r| %>
-  <a class="row list" href="show/<%= r.id %>">
+  <a class="row list" href="registers/<%= r.id %>">
     <div class="col-xs-12">
       <div class="text-center">
         <div class="col-xs-4">
