--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<div id="container" class="container-fluid">
   <% Register.all.each do |r| %>
-  <a class="row list" href="registers/<%= r.id %>">
+  <a id="r_#{r.id}" class="row list" href="registers/<%= r.id %>">
     <div class="col-xs-12">
       <div class="text-center">
         <div class="col-xs-4">
