--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Register</h1>
+<div id="container" class="container-fluid">
+    <h1>New Register</h1>
 
-<%= render 'form', register: @register %>
+    <%= render 'form', register: @register %>
 
-<%= link_to 'Back', registers_path %>
+    <%= link_to 'Back', registers_path, class: "btn btn-primary fullwidth"%>
+</div>
