--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <a class="navbar-brand navbar-brand-center" href="https://www.google.co.jp/"><%= image_tag 'logo', style: "height:100%; margin: auto;"%></a>
+        <%= link_to image_tag('logo', style: "height:100%; margin: auto;"), root_path, class: "navbar-brand navbar-brand-center" %>    
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <!-- /.navbar-collapse -->
