--- a/app/views/toppage/index.html.erb
+++ b/app/views/toppage/index.html.erb
@@ -1,8 +1,6 @@
 <div id="container" class="container-fluid">
     <div class="menu">
-        <%= link_to new_register_path, class: "btn btn-danger btn-lg btn-block", role: "button" %>
-        <%= link_to registers_path, class: "btn btn-danger btn-lg btn-block", role: "button" %>
-	    <a class="btn btn-danger btn-lg btn-block" href="regist.html" role="button">起こして！</a>
-		<a class="btn btn-danger btn-lg btn-block" href="list.html" role="button">起こすぞ！</a>
+        <%= link_to "起こして！", new_register_path, class: "btn btn-danger btn-lg btn-block", role: "button" %>
+        <%= link_to "起こすぞ！", registers_path, class: "btn btn-danger btn-lg btn-block", role: "button" %>
 	</div>
 </div>
